# heindall

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  README.md  docker-compose.nginx.yml  docker-compose.yml  info.json
.github/workflows/: ghcr.yml
apps/api/: go.mod  go.sum
apps/api/cmd/api/: main.go
apps/api/cmd/evaluate/: main.go
apps/api/cmd/healthcheck/: main.go
apps/api/cmd/preprocess/: main.go
apps/api/internal/app/: config.go  server.go  server_test.go
apps/api/internal/fraud/: binary_index.go  binary_index_heap.go  binary_index_linux.go  ivf_build.go  ivf_search.go  ivf_search_avx2_amd64.go  ivf_search_avx2_amd64.s  ivf_search_avx2_stub.go  load.go  model.go  quantized.go  quantized_test.go  search.go  search_benchmark_test.go  service.go  vectorize.go  vectorize_benchmark_test.go  vectorize_json.go  vectorize_test.go
apps/api/internal/router/: handlers.go  handlers_benchmark_test.go  handlers_test.go  routes.go
apps/load-balancer/: Cargo.toml
apps/load-balancer/src/: config.rs  main.rs  proxy.rs  round_robin.rs  upstream.rs
data/: mcc_risk.json  normalization.json
deploy/: Dockerfile.api  Dockerfile.api.local-golpher  Dockerfile.lb  nginx-lb.conf
docs/: architecture.md  pprof.md
scripts/: bench.sh  download-datasets.sh  preprocess.sh  validate.sh
