[package]
name = "heindall-lb"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2"
socket2 = "0.5"
tokio = { version = "1", features = ["io-util", "net", "rt", "rt-multi-thread", "sync", "time"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
